vabhub-deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vabhub
  labels:
    name: vabhub
    environment: production
